unpackaged/main/default/objects/Generic_Template_Setting__mdt/Generic_Template_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Contains settings for a particular Corporate Account</description>
    <label>Generic Template Setting</label>
    <pluralLabel>Generic Template Settings</pluralLabel>
</CustomObject>