unpackaged/main/default/objects/Generic_Template_Setting__mdt/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Name of the Customer, Account, Company, Corporate who is added to the Generic Template as a corporate account</description>
    <inlineHelpText>Name of the Customer, Account, Company, Corporate who is added to the Generic Template as a corporate account</inlineHelpText>
    <label>Customer Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>