unpackaged/main/default/objects/Generic_Template_Setting__mdt/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <description>A generic display Name for the main Corporate Account Object. Eg: Event, Congress, Show</description>
    <inlineHelpText>A generic display Name for the main Corporate Account Object. Eg: Event, Congress, Show</inlineHelpText>
    <label>Entity Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>