unpackaged/main/default/objects/Generic_Template_Setting__mdt/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <description>Name of the program as called by the customer, like Event, Congress, Show etc</description>
    <label>Program Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>